# kunkun

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  CONTRIBUTING.md  Cargo.toml  README.md  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: config.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: beta-build.yml  ci.yml  desktop-publish.yml  desktop-pulbish.yml  jsr-publish.yml  manifest-schema-upload.yml
apps/cli/: CHANGELOG.md  README.md  build.ts  bun.lockb  cli.ts  package.json
apps/cli/__tests__/: build-extension.test.ts  verify.test.ts
apps/cli/src/: constants.ts  logger.ts  types.ts
apps/cli/src/commands/: build.ts  index.ts  verify.ts
apps/create-kunkun/: CHANGELOG.md  README.md  build.ts  index.ts  package.json  tsconfig.json
apps/create-kunkun/__tests__/: create-template.test.ts
apps/create-kunkun/scripts/: postbuild.ts
apps/create-kunkun/src/: constants.ts  utils.ts
apps/create-kunkun/src/__tests__/: util.test.ts
apps/desktop/: .gitignore  README.md  app.d.ts  components.json  package.json  postcss.config.js  setup.ts  svelte.config.js  tailwind.config.ts  tsconfig.json  uno.config.ts  vite.config.js
apps/desktop/cli/: mod.ts  package.json  tsconfig.json
apps/desktop/cli/src/: utils.ts
apps/desktop/cli/src/docker/: entrypoint.sh
apps/desktop/create-kunkun/: CHANGELOG.md  bun.lockb  rollup.config.js
apps/desktop/create-kunkun/__tests__/: create-template.test.ts
apps/desktop/create-kunkun/src/: patch.ts
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/setup/: clipboard.rs  mod.rs  tray.rs  window.rs
apps/desktop/src-tauri/src/utils/: log.rs  server.rs
apps/desktop/src/lib/: constants.ts  supabase.ts
apps/desktop/src/lib/cmds/: builtin.ts  ext.ts  index.ts  quick-links.ts  system.ts
apps/desktop/src/lib/components/: app-sidebar.svelte  dance.svelte
apps/desktop/src/lib/components/common/: DragNDrop.svelte  HotkeyInput.svelte  HotkeyInputPopover.svelte  IconMultiplexer.svelte  sidebar-trigger.svelte
apps/desktop/src/lib/components/context/: AppContext.svelte
apps/desktop/src/lib/components/dance/: dance-transition.svelte  dance.svelte
apps/desktop/src/lib/components/extension/: ExtListItem.svelte  StoreListing.svelte
apps/desktop/src/lib/components/main/: BuiltinCmds.svelte  CmdItemExt.svelte  CommandPalette.svelte  CustomCommandInput.svelte  ExtCmdsGroup.svelte  GlobalCommandPaletteFooter.svelte  cmd.svelte
apps/desktop/src/lib/context/: appConfig.ts  appState.ts  index.ts
apps/desktop/src/lib/stores/: appConfig.ts  appState.ts  auth.ts  cmdQuery.ts  cmds.ts  extensions.ts  index.ts  quick-links.ts  winExtMap.ts
apps/desktop/src/lib/types/: appConfig.ts
apps/desktop/src/lib/utils/: command-score.ts  deeplink.ts  dom.ts  hotkey.ts  js.ts  key.ts  notification.ts  process.ts  route.ts  style.ts  sync-store.ts  tauri-events.ts  updater.ts  url.ts  window.ts
apps/desktop/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
apps/desktop/src/routes/app/: +layout.svelte  +layout.ts  +page.svelte
apps/desktop/src/routes/app/auth/: +page.svelte
apps/desktop/src/routes/app/dance/: +page.svelte
apps/desktop/src/routes/app/settings/: +layout.svelte  sidebar.svelte
apps/desktop/src/routes/app/troubleshooters/: +layout.svelte  sidebar.svelte
apps/desktop/src/routes/auth/: +page.svelte
apps/desktop/src/routes/auth/confirm/: +page.svelte  +page.ts
apps/desktop/src/routes/dance/: +page.svelte
apps/desktop/src/routes/extension/clipboard/: +page.svelte  content-preview.svelte
apps/desktop/src/routes/extension/create-quick-link/: +page.server.ts  +page.svelte  schema.ts  settings-form.svelte
apps/desktop/src/routes/extension/file-transfer/: +page.svelte  file-icon.svelte
apps/desktop/src/routes/extension/permission-inspector/: +page.svelte
apps/desktop/src/routes/extension/pin-screenshot/: +page.svelte
apps/desktop/src/routes/extension/store/: +layout.svelte  +page.svelte  +page.ts
apps/desktop/src/routes/extension/ui-iframe/: +page.svelte  +page.ts
apps/desktop/src/routes/extension/ui-worker/: +page.svelte  +page.ts
apps/desktop/src/routes/settings/: +layout.svelte  +page.svelte  sidebar-trigger.svelte  sidebar.svelte
apps/desktop/src/routes/splashscreen/: +page.svelte
apps/desktop/src/routes/troubleshooters/: +layout.svelte  sidebar.svelte
templates/template-ext-next/: .gitignore  CHANGELOG.md  README.md  package.json  tsconfig.json
templates/template-ext-next/src/app/: globals.css
templates/template-ext-next/src/app/about/: page.tsx
templates/template-ext-next/src/components/: about.tsx
templates/template-ext-nuxt/: .gitignore  README.md
templates/template-ext-nuxt/pages/: about.vue
templates/template-ext-react/: .gitignore  CHANGELOG.md  README.md  package.json  tailwind.config.js  vite.config.ts
templates/template-ext-react/src/: App.tsx
templates/template-ext-svelte/: CHANGELOG.md  tsconfig.json  vite.config.ts
templates/template-ext-svelte/src/: app.css
templates/template-ext-sveltekit/: .gitignore  tailwind.config.ts
templates/template-ext-sveltekit/src/routes/: +page.svelte
templates/template-ext-vue/: CHANGELOG.md  README.md  tsconfig.app.json
templates/template-ext-vue/src/: index.css
templates/template-ext-worker/: package.json
(+29 files in other folders)
