[workspace]
resolver = "2"

members = [
    "apps/desktop/src-tauri",
    "packages/tauri-plugins/jarvis",
    "packages/db",
    "packages/mac-security-rs",
    "packages/tauri-plugins/jarvis",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.86"
serde_json = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
mdns-sd = "0.11.1"
tauri-plugin-network = { path = "./vendors/tauri-plugin-network" }
tauri-plugin-clipboard = "2.1.8"
mac-security-rs = { path = "./packages/mac-security-rs" }
log = "0.4.22"
strum = "0.26"
strum_macros = "0.26"
chrono = "0.4.38"
applications = { path = "./vendors/applications-rs" }
tauri-plugin-jarvis = { path = "./packages/tauri-plugins/jarvis" }
tauri-plugin-system-info = { path = "./vendors/tauri-plugin-system-info" }
db = { path = "./packages/db" }
