[workspace]
resolver = "2"

members = [
    "apps/desktop/src-tauri",
    "packages/tauri-plugins/jarvis",
    "packages/db",
    "packages/mac-security-rs",
    "packages/tauri-plugins/jarvis",
    "packages/crypto",
    "packages/grpc",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.86"
serde_json = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.12"
mdns-sd = "0.11.1"
tauri-plugin-network = { path = "./vendors/tauri-plugin-network" }
tauri-plugin-clipboard = "2.1.8"
mac-security-rs = { path = "./packages/mac-security-rs" }
log = "0.4.22"
strum = "0.26"
strum_macros = "0.26"
chrono = "0.4.38"
applications = { path = "./vendors/applications-rs" }
grpc = { path = "./packages/grpc" }
tauri-plugin-jarvis = { path = "./packages/tauri-plugins/jarvis" }
tauri-plugin-system-info = { path = "./vendors/tauri-plugin-system-info" }
db = { path = "./packages/db" }
axum = { version = "0.6.20" }
axum-extra = { version = "0.8.0" }
axum-server = { version = "0.5", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
crypto = { path = "./packages/crypto" }
base64 = "0.22.1"
obfstr = "0.4.4"
sysinfo = "0.32.0"
openssl = "0.10.68"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
rayon = "1.10.0"
